--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,800;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Spotify</title>
   </head>
@@ -12,10 +14,54 @@
 
       <div class="sidebar">
 
+        <div class="stilelogo">
+
+          <img src="img/logo.svg" alt="spotify">
+
+        </div>
+        <div class="home">
+
+          <ul>
+            <li><i class="fas fa-home"></i>Home</li>
+            <li><i class="fas fa-search"></i>Cerca</li>
+            <li><img class="library" src="img/libreria.svg" alt="la mia libreria">La tua libreria</li>
+          </ul>
+
+        </div>
+        <div class="playlist">
+
+          <ul>
+            <li><span>PLAYLIST</span></li>
+            <li><i class="far fa-plus-square"></i>Crea Playlist</li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+          </ul>
+
+        </div>
+        <div class="installprofile">
+
+          <div class="install">
+
+          </div>
+          <div class="profile">
+
+          </div>
+
+        </div>
+
+
       </div>
       <div class="central">
 
         <div class="upgrade">
+
+            <div class="butupgrade">
+              EFFETTUA L'UPGRADE
+            </div>
 
         </div>
         <div class="main">
