--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
           <div class="install">
 
+            <span>Installa App</span>
+
           </div>
           <div class="profile">
 
@@ -65,6 +67,218 @@
 
         </div>
         <div class="main">
+
+          <div class="evidence">
+
+            <span>IN EVIDENZA</span>
+            <span>PODCAST</span>
+            <span>CLASSIFICHE</span>
+            <span>GENERI E MOOD</span>
+            <span>NUOVE USCITE</span>
+            <span>SCOPRI</span>
+
+          </div>
+          <div class="recently">
+
+            <strong>Recently played</strong>
+
+          </div>
+          <div class="cardbox">
+
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/metal_lifting.jpg" alt="metal">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>Heavy Metal</strong></span>
+
+              </div>
+              <div class="autore">
+
+                <span>Subtitle</span>
+
+              </div>
+
+            </div>
+
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/stranger.jpeg" alt="Stranger things">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</strong></span>
+
+              </div>
+              <div class="autore">
+
+                <span>Kyle Dixon & Michael Stein</span>
+
+              </div>
+
+            </div>
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/aquietplace.jpeg" alt="A quiet place">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>A Quiet place</strong></span>
+
+              </div>
+              <div class="autore">
+
+                <span>Subtitle</span>
+
+              </div>
+
+            </div>
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/split.jpeg" alt="split">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>Split</strong></span>
+
+              </div>
+              <div class="autore">
+
+                <span>Subtitle</span>
+
+              </div>
+
+            </div>
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/cure.jpeg" alt="cure">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>A cure for wellness</strong></span>
+
+              </div>
+              <div class="autore">
+
+                <span>Subtitle</span>
+
+              </div>
+
+            </div>
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/sinister.jpeg" alt="Sinister">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>Sinister</strong></span>
+
+              </div>
+              <div class="autore">
+
+                <span>Subtitle</span>
+
+              </div>
+
+            </div>
+
+          </div>
+          <div class="recently">
+
+            <strong>Creato per John Doe</strong>
+
+          </div>
+          <div class="suggerimenti">
+
+            Più ascolti, più accurati saranno i suggerimenti!
+
+          </div>
+          <div id="cardbox2" class="cardbox">
+
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/radar.jpeg" alt="Release Radar">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>Release Radar</strong></span>
+
+              </div>
+
+            </div>
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/mixdaily.jpeg" alt="Release Radar">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>Daily Mix 1</strong></span>
+
+              </div>
+
+            </div>
+
+          </div>
+          <div class="recently">
+
+            <strong>Artisti più popolari</strong>
+
+          </div>
+          <div class="suggerimenti">
+
+            Più ascolti, più accurati saranno i suggerimenti!
+
+          </div>
+          <div class="cardbox3">
+
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/youg.jpeg" alt="Release Radar">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>Lana Del Rey</strong></span>
+
+              </div>
+
+            </div>
+            <div class="thumbnail">
+              <div class="stilefoto">
+
+                <img src="img/einaudi.jpeg" alt="Release Radar">
+
+              </div>
+              <div class="titolo">
+
+                <span><strong>Ludovico Einaudi</strong></span>
+
+              </div>
+
+            </div>
+
+
+          </div>
+
+
 
         </div>
 
