--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
 
           <div class="install">
 
+            <img class="download" src="img/download.svg" alt="">
             <span>Installa App</span>
 
           </div>
           <div class="profile">
+
+            <img class="profilo" src="img/profile.svg" alt="">
+            <span><strong>John Doe</strong></span>
 
           </div>
 
@@ -275,10 +279,7 @@
 
             </div>
 
-
           </div>
-
-
 
         </div>
 
