--- a/index.html
+++ b/index.html
@@ -14,34 +14,40 @@
 
       <div class="sidebar">
 
-        <div class="stilelogo">
+        <div class="justify">
 
-          <img src="img/logo.svg" alt="spotify">
+          <div class="stilelogo">
+
+            <img src="img/logo.svg" alt="spotify">
+
+          </div>
+          <div class="home">
+
+            <ul>
+              <li><i class="fas fa-home"></i>Home</li>
+              <li><i class="fas fa-search"></i>Cerca</li>
+              <li><img class="library" src="img/libreria.svg" alt="la mia libreria">La tua libreria</li>
+            </ul>
+
+          </div>
+          <div class="playlist">
+
+            <ul>
+              <li><span>PLAYLIST</span></li>
+              <li><i class="far fa-plus-square"></i>Crea Playlist</li>
+              <li><span>Nome Playlist</span></li>
+              <li><span>Nome Playlist</span></li>
+              <li><span>Nome Playlist</span></li>
+              <li><span>Nome Playlist</span></li>
+              <li><span>Nome Playlist</span></li>
+              <li><span>Nome Playlist</span></li>
+            </ul>
+
+          </div>
 
         </div>
-        <div class="home">
 
-          <ul>
-            <li><i class="fas fa-home"></i>Home</li>
-            <li><i class="fas fa-search"></i>Cerca</li>
-            <li><img class="library" src="img/libreria.svg" alt="la mia libreria">La tua libreria</li>
-          </ul>
 
-        </div>
-        <div class="playlist">
-
-          <ul>
-            <li><span>PLAYLIST</span></li>
-            <li><i class="far fa-plus-square"></i>Crea Playlist</li>
-            <li><span>Nome Playlist</span></li>
-            <li><span>Nome Playlist</span></li>
-            <li><span>Nome Playlist</span></li>
-            <li><span>Nome Playlist</span></li>
-            <li><span>Nome Playlist</span></li>
-            <li><span>Nome Playlist</span></li>
-          </ul>
-
-        </div>
         <div class="installprofile">
 
           <div class="install">
@@ -74,7 +80,7 @@
 
           <div class="evidence">
 
-            <span>IN EVIDENZA</span>
+            <span class="sub">IN EVIDENZA</span>
             <span>PODCAST</span>
             <span>CLASSIFICHE</span>
             <span>GENERI E MOOD</span>
@@ -285,6 +291,70 @@
 
       </div>
       <div class="player">
+        <div class="playercontainer">
+
+          <div class="playersx">
+
+            <div class="fotoplayer">
+
+            </div>
+            <div class="titoloeautore">
+
+              <span class="minititolo">Sinister</span><br>
+              <span class="miniautore">Brano nome</span>
+
+            </div>
+            <div class="like">
+
+              <span><i class="far fa-heart"></i></span>
+              <span><i class="far fa-folder"></i></span>
+
+            </div>
+
+          </div>
+          <div class="playercn">
+            <div class="playbutton">
+
+              <span><i class="fas fa-random"></i></span>
+              <span><i class="fas fa-step-backward"></i></span>
+              <span><i class="far fa-play-circle"></i></span>
+              <span><i class="fas fa-step-forward"></i></span>
+              <span><i class="fas fa-redo"></i></span>
+
+            </div>
+            <div class="tempo">
+
+              <span>0:25</span>
+              <div class="timeline">
+
+                <div class="playtime"></div>
+                <div class="pallino">
+
+                </div>
+              </div>
+              <span>4:35</span>
+
+            </div>
+
+          </div>
+          <div class="playerdx">
+
+            <span><i class="fas fa-list"></i></span>
+            <span><i class="fas fa-desktop"></i></span>
+            <span><i class="fas fa-volume-up"></i></span>
+            <div class="volumeline">
+
+              <div class="volume">
+
+              </div>
+
+            </div>
+
+
+
+          </div>
+
+        </div>
 
       </div>
 
