Hover, transition e layover

--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@
 
         <div class="upgrade">
 
+          <div class="invisible">
+
             <div class="butupgrade">
               EFFETTUA L'UPGRADE
             </div>
+
+          </div>
+
+
 
         </div>
         <div class="main">
@@ -99,6 +105,11 @@
               <div class="stilefoto">
 
                 <img src="img/metal_lifting.jpg" alt="metal">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -112,12 +123,18 @@
 
               </div>
 
+
             </div>
 
             <div class="thumbnail">
               <div class="stilefoto">
 
                 <img src="img/stranger.jpeg" alt="Stranger things">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -136,6 +153,11 @@
               <div class="stilefoto">
 
                 <img src="img/aquietplace.jpeg" alt="A quiet place">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -154,6 +176,11 @@
               <div class="stilefoto">
 
                 <img src="img/split.jpeg" alt="split">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -172,6 +199,11 @@
               <div class="stilefoto">
 
                 <img src="img/cure.jpeg" alt="cure">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -190,6 +222,11 @@
               <div class="stilefoto">
 
                 <img src="img/sinister.jpeg" alt="Sinister">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -222,6 +259,11 @@
               <div class="stilefoto">
 
                 <img src="img/radar.jpeg" alt="Release Radar">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -235,6 +277,11 @@
               <div class="stilefoto">
 
                 <img src="img/mixdaily.jpeg" alt="Release Radar">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -262,6 +309,11 @@
               <div class="stilefoto">
 
                 <img src="img/youg.jpeg" alt="Release Radar">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -275,6 +327,11 @@
               <div class="stilefoto">
 
                 <img src="img/einaudi.jpeg" alt="Release Radar">
+                <div class="layover">
+
+                  <span><i class="far fa-play-circle"></i></span>
+
+                </div>
 
               </div>
               <div class="titolo">
@@ -325,6 +382,7 @@
             <div class="tempo">
 
               <span>0:25</span>
+
               <div class="timeline">
 
                 <div class="playtime"></div>
@@ -332,6 +390,7 @@
 
                 </div>
               </div>
+
               <span>4:35</span>
 
             </div>
