--- a/index.html
+++ b/index.html
@@ -47,24 +47,44 @@
 
         </div>
 
-
         <div class="installprofile">
 
           <div class="install">
 
-            <img class="download" src="img/download.svg" alt="">
+            <img class="download" src="img/download.svg" alt="download">
             <span>Installa App</span>
 
           </div>
           <div class="profile">
 
-            <img class="profilo" src="img/profile.svg" alt="">
+            <img class="profilo" src="img/profile.svg" alt="profilo">
             <span><strong>John Doe</strong></span>
 
           </div>
 
         </div>
 
+      </div>
+      <div class="sidebar2">
+
+        <div class="sidebaricon1">
+
+          <ul>
+            <li><i class="fab fa-spotify"></i></li>
+            <li><i class="fas fa-home"></i></li>
+            <li><i class="fas fa-search"></i></li>
+            <li><img class="library" src="img/libreria.svg" alt="la mia libreria"></li>
+          </ul>
+
+        </div>
+        <div class="sidebaricon2">
+
+          <ul>
+            <li><img class="download" src="img/download.svg" alt="download"></li>
+            <li><img class="profilo" src="img/profile.svg" alt="profilo"></li>
+          </ul>
+
+        </div>
 
       </div>
       <div class="central">
@@ -78,8 +98,6 @@
             </div>
 
           </div>
-
-
 
         </div>
         <div class="main">
